--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -3,8 +3,29 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
+
 	body
 		.container
 			div.row
 				.col-md-12
 					block content
+		
+		script(src="/javascripts/handlebars.js", type="text/javascript")
+		
+		// Handlebars templates
+		script(id="todo-list" type="text/x-handlebars-template")
+			{{#each todos}}
+			include ./partials/todo-handlebars.jade
+			{{/each}}
+			
+		script(id="todo-item" type="text/x-handlebars-template")
+			include ./partials/todo-handlebars.jade
+		
+		script(src="/javascripts/jquery.js", type="text/javascript")
+		script(src="/javascripts/todo.list.js", type="text/javascript")
+		script(src="/javascripts/todo.nav.js", type="text/javascript")
+		script(src="/javascripts/todo.new.js", type="text/javascript")
+		script(src="/javascripts/todo.data.js", type="text/javascript")
+		script(src="/javascripts/todo.js", type="text/javascript")
+
+		
